--- a/thesis.tex
+++ b/thesis.tex
@@ -26,7 +26,7 @@
 \input{introduction.tex}
 \input{sks.tex}
 \input{atomic_flows.tex}
-%\input{atomic_flows_and_derivations.tex}
+\input{atomic_flows_and_derivations.tex}
 \input{normal_forms.tex}
 \input{global_reductions.tex}
 \input{main_result.tex}
